# gsdl-poc

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
.github/workflows/: black.yml  pytest.yml
gsdl/algorithm/: __init__.py  algorithm.py  compose.py  dense_mat_vec_mul.py  i_algorithm.py
gsdl/common/: __init__.py
gsdl/condition/: __init__.py  abstract_condition.py  equal_to.py  greater_than.py  i_condition.py  less_than.py
gsdl/generator/: __init__.py  i_generator.py  int_range.py
gsdl/join/: __init__.py  concat.py  i_join.py
gsdl/model/: __init__.py  composition.py  dense_matrix.py
gsdl/operation/: __init__.py  abstract_operation.py  concat.py  i_codeable.py  i_implementation.py  i_operation.py  repeat.py  terminal.py  wrap.py
gsdl/parameter/: __init__.py  abstract_param.py  i_param.py  int_param.py  operator.py  param.py
gsdl/rule/: __init__.py  i_rule.py  rule.py  rule_set.py
gsdl/set_builder/: __init__.py  i_set_builder.py  set_builder.py
gsdl/util/: __init__.py  text_util.py
tests/algorithm/: test_algorithm.py  test_compose.py  test_dense_mat_vec_mul.py
tests/condition/: test_equal_to.py  test_greater_than.py  test_less_than.py
tests/generator/: test_int_range.py
tests/join/: test_concat.py
tests/model/: test_composition.py  test_dense_matrix.py
tests/operation/: mocks.py  test_abstract_operation.py  test_repeat.py  test_terminal.py  test_wrap.py
tests/parameter/: test_int_param.py  test_operator.py  test_param.py
tests/rule/: test_rule.py  test_rule_set.py
tests/set_builder/: test_set_builder.py
(+1 files in other folders)
